<resources>
<!--    special string-->
    <string name="text_view_progress_format">%1$d of %2$d</string>
<!--    end-->

    <string name="app_name">Simple Quiz App</string>
    <string name="simple_quiz_app_title">Simple Quiz App</string>
    <string name="welcome_brother_title">Welcome brother!</string>
    <string name="enter_your_name_text">Please enter your name</string>
    <string name="name_placeholder">Name</string>
    <string name="start_placeholder">Start</string>
    <string name="image_flag_placeholder">Image Flag</string>
    <string name="check_placeholder">CHECK</string>
    <string name="finish_placeholder">FINISH</string>
</resources>